--- a/chord.html
+++ b/chord.html
@@ -209,21 +209,21 @@
 		<div id="configuration">
 			<table class="rootmenu">
 				<tr><th>Root</th></tr>
-				<tr><td><input type="radio" onchange="changeRoot('c')"  name="root" checked>C</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('g')"  name="root">G</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('d')"  name="root">D</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('a')"  name="root">A</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('e')"  name="root">E</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('b')"  name="root">B</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('fs')" name="root">F&sharp;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('cs')" name="root">C&sharp;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('f')"  name="root">F</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('bf')" name="root">B&flat;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('ef')" name="root">E&flat;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('af')" name="root">A&flat;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('df')" name="root">D&flat;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('gf')" name="root">G&flat;</td></tr>
-				<tr><td><input type="radio" onchange="changeRoot('cf')" name="root">C&flat;</td></tr>
+				<tr><td><input type="radio" id="c"  onchange="changeRoot('c' )" name="root" checked>C</td></tr>
+				<tr><td><input type="radio" id="g"  onchange="changeRoot('g' )" name="root">G</td></tr>
+				<tr><td><input type="radio" id="d"  onchange="changeRoot('d' )" name="root">D</td></tr>
+				<tr><td><input type="radio" id="a"  onchange="changeRoot('a' )" name="root">A</td></tr>
+				<tr><td><input type="radio" id="e"  onchange="changeRoot('e' )" name="root">E</td></tr>
+				<tr><td><input type="radio" id="b"  onchange="changeRoot('b' )" name="root">B</td></tr>
+				<tr><td><input type="radio" id="fs" onchange="changeRoot('fs')" name="root">F&sharp;</td></tr>
+				<tr><td><input type="radio" id="cs" onchange="changeRoot('cs')" name="root">C&sharp;</td></tr>
+				<tr><td><input type="radio" id="f"  onchange="changeRoot('f' )" name="root">F</td></tr>
+				<tr><td><input type="radio" id="bf" onchange="changeRoot('bf')" name="root">B&flat;</td></tr>
+				<tr><td><input type="radio" id="ef" onchange="changeRoot('ef')" name="root">E&flat;</td></tr>
+				<tr><td><input type="radio" id="af" onchange="changeRoot('af')" name="root">A&flat;</td></tr>
+				<tr><td><input type="radio" id="df" onchange="changeRoot('df')" name="root">D&flat;</td></tr>
+				<tr><td><input type="radio" id="gf" onchange="changeRoot('gf')" name="root">G&flat;</td></tr>
+				<tr><td><input type="radio" id="cf" onchange="changeRoot('cf')" name="root">C&flat;</td></tr>
 			</table>
 			<table class="tonemenu">
 				<tr>
@@ -234,126 +234,126 @@
 				<tr>
 					<td id="degree1">C</td>
 					<td>
-						<span><input id="n0" type="radio" onchange="changeTone(event)" name="tone0" value="0" checked></span>
+						<span><input type="radio" id="n0"   onchange="changeTone(0, undefined)" name="tone0" checked></span>
 					</td>
 					<td>
-						<span><input id="t1" type="radio" onchange="changeTone(event)" name="tone0" value="0"><img src="img/t1.svg"></span>
+						<span><input type="radio" id="t1"   onchange="changeTone(0, 't1'   )" name="tone0"><img src="img/t1.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td></td>
 					<td>
-						<span><input id="n1" type="radio" onchange="changeTone(event)" name="tone1" value="1" checked></span>
+						<span><input type="radio" id="n1"   onchange="changeTone(1, undefined)" name="tone1" checked></span>
 					</td>
 					<td>
-						<span><input id="t2f" type="radio" onchange="changeTone(event)" name="tone1" value="1"><img src="img/t2f.svg"></span>
-						<span><input id="t9f" type="radio" onchange="changeTone(event)" name="tone1" value="1"><img src="img/t9f.svg"></span>
+						<span><input type="radio" id="t2f"  onchange="changeTone(1, 't2f'  )" name="tone1"><img src="img/t2f.svg"></span>
+						<span><input type="radio" id="t9f"  onchange="changeTone(1, 't9f'  )" name="tone1"><img src="img/t9f.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td id="degree2">D</td>
 					<td>
-						<span><input id="n2" type="radio" onchange="changeTone(event)" name="tone2" value="2" checked></span>
+						<span><input type="radio" id="n2"   onchange="changeTone(2, undefined)" name="tone2" checked></span>
 					</td>
 					<td>
-						<span><input id="t2" type="radio" onchange="changeTone(event)" name="tone2" value="2"><img src="img/t2.svg"></span>
-						<span><input id="t9" type="radio" onchange="changeTone(event)" name="tone2" value="2"><img src="img/t9.svg"></span>
+						<span><input type="radio" id="t2"   onchange="changeTone(2, 't2'   )" name="tone2"><img src="img/t2.svg"></span>
+						<span><input type="radio" id="t9"   onchange="changeTone(2, 't9'   )" name="tone2"><img src="img/t9.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td></td>
 					<td>
-						<span><input id="n3" type="radio" onchange="changeTone(event)" name="tone3" value="3" checked></span>
+						<span><input type="radio" id="n3"   onchange="changeTone(3, undefined)" name="tone3" checked></span>
 					</td>
 					<td>
-						<span><input id="t3f" type="radio" onchange="changeTone(event)" name="tone3" value="3"><img src="img/t3f.svg"></span>
-						<span><input id="t9s" type="radio" onchange="changeTone(event)" name="tone3" value="3"><img src="img/t9s.svg"></span>
+						<span><input type="radio" id="t3f"  onchange="changeTone(3, 't3f'  )" name="tone3"><img src="img/t3f.svg"></span>
+						<span><input type="radio" id="t9s"  onchange="changeTone(3, 't9s'  )" name="tone3"><img src="img/t9s.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td id="degree3">E</td>
 					<td>
-						<span><input id="n4" type="radio" onchange="changeTone(event)" name="tone4" value="4" checked></span>
+						<span><input type="radio" id="n4"   onchange="changeTone(4, undefined)" name="tone4" checked></span>
 					</td>
 					<td>
-						<span><input id="t3" type="radio" onchange="changeTone(event)" name="tone4" value="4"><img src="img/t3.svg"></span>
-						<span><input id="t11f" type="radio" onchange="changeTone(event)" name="tone4" value="4"><img src="img/t11f.svg"></span>
+						<span><input type="radio" id="t3"   onchange="changeTone(4, 't3'   )" name="tone4"><img src="img/t3.svg"></span>
+						<span><input type="radio" id="t11f" onchange="changeTone(4, 't11f' )" name="tone4"><img src="img/t11f.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td id="degree4">F</td>
 					<td>
-						<span><input id="n5" type="radio" onchange="changeTone(event)" name="tone5" value="5" checked></span>
+						<span><input type="radio" id="n5"   onchange="changeTone(5, undefined)" name="tone5" checked></span>
 					</td>
 					<td>
-						<span><input id="t4" type="radio" onchange="changeTone(event)" name="tone5" value="5"><img src="img/t4.svg"></span>
-						<span><input id="t11" type="radio" onchange="changeTone(event)" name="tone5" value="5"><img src="img/t11.svg"></span>
+						<span><input type="radio" id="t4"   onchange="changeTone(5, 't4'   )" name="tone5"><img src="img/t4.svg"></span>
+						<span><input type="radio" id="t11"  onchange="changeTone(5, 't11'  )" name="tone5"><img src="img/t11.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td></td>
 					<td>
-						<span><input id="n6" type="radio" onchange="changeTone(event)" name="tone6" value="6" checked></span>
+						<span><input type="radio" id="n6"   onchange="changeTone(6, undefined)" name="tone6" checked></span>
 					</td>
 					<td>
-						<span><input id="t5f" type="radio" onchange="changeTone(event)" name="tone6" value="6"><img src="img/t5f.svg"></span>
-						<span><input id="t11s" type="radio" onchange="changeTone(event)" name="tone6" value="6"><img src="img/t11s.svg"></span>
+						<span><input type="radio" id="t5f"  onchange="changeTone(6, 't5f'  )" name="tone6"><img src="img/t5f.svg"></span>
+						<span><input type="radio" id="t11s" onchange="changeTone(6, 't11s' )" name="tone6"><img src="img/t11s.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td id="degree5">G</td>
 					<td>
-						<span><input id="n7" type="radio" onchange="changeTone(event)" name="tone7" value="7" checked></span>
+						<span><input type="radio" id="n7"   onchange="changeTone(7, undefined)" name="tone7" checked></span>
 					</td>
 					<td>
-						<span><input id="t5" type="radio" onchange="changeTone(event)" name="tone7" value="7"><img src="img/t5.svg"></span>
+						<span><input type="radio" id="t5"   onchange="changeTone(7, 't5'   )" name="tone7"><img src="img/t5.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td></td>
 					<td>
-						<span><input id="n8" type="radio" onchange="changeTone(event)" name="tone8" value="8" checked></span>
+						<span><input type="radio" id="n8"   onchange="changeTone(8, undefined)" name="tone8" checked></span>
 					</td>
 					<td>
-						<span><input id="t5s" type="radio" onchange="changeTone(event)" name="tone8" value="8"><img src="img/t5s.svg"></span>
-						<span><input id="t6f" type="radio" onchange="changeTone(event)" name="tone8" value="8"><img src="img/t6f.svg"></span>
-						<span><input id="t13f" type="radio" onchange="changeTone(event)" name="tone8" value="8"><img src="img/t13f.svg"></span>
+						<span><input type="radio" id="t5s"  onchange="changeTone(8, 't5s'  )" name="tone8"><img src="img/t5s.svg"></span>
+						<span><input type="radio" id="t6f"  onchange="changeTone(8, 't6f'  )" name="tone8"><img src="img/t6f.svg"></span>
+						<span><input type="radio" id="t13f" onchange="changeTone(8, 't13f' )" name="tone8"><img src="img/t13f.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td id="degree6">A</td>
 					<td>
-						<span><input id="n9" type="radio" onchange="changeTone(event)" name="tone9" value="9" checked></span>
+						<span><input type="radio" id="n9"   onchange="changeTone(9, undefined)" name="tone9" checked></span>
 					</td>
 					<td>
-						<span><input id="t6" type="radio" onchange="changeTone(event)" name="tone9" value="9"><img src="img/t6.svg"></span>
-						<span><input id="t7ff" type="radio" onchange="changeTone(event)" name="tone9" value="9"><img src="img/t7ff.svg"></span>
-						<span><input id="t13" type="radio" onchange="changeTone(event)" name="tone9" value="9"><img src="img/t13.svg"></span>
+						<span><input type="radio" id="t6"   onchange="changeTone(9, 't6'   )" name="tone9"><img src="img/t6.svg"></span>
+						<span><input type="radio" id="t7ff" onchange="changeTone(9, 't7ff' )" name="tone9"><img src="img/t7ff.svg"></span>
+						<span><input type="radio" id="t13"  onchange="changeTone(9, 't13'  )" name="tone9"><img src="img/t13.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td></td>
 					<td>
-						<span><input id="n10" type="radio" onchange="changeTone(event)" name="tone10" value="10" checked></span>
+						<span><input type="radio" id="n10"  onchange="changeTone(10, undefined)" name="tone10" checked></span>
 					</td>
 					<td>
-						<span><input id="t7f" type="radio" onchange="changeTone(event)" name="tone10" value="10"><img src="img/t7f.svg"></span>
+						<span><input type="radio" id="t7f"  onchange="changeTone(10, 't7f'  )" name="tone10"><img src="img/t7f.svg"></span>
 					</td>
 				</tr>
 				<tr>
 					<td id="degree7">B</td>
 					<td>
-						<span><input id="n11" type="radio" onchange="changeTone(event)" name="tone11" value="11" checked></span>
+						<span><input type="radio" id="n11"  onchange="changeTone(11, undefined)" name="tone11" checked></span>
 					</td>
 					<td>
-						<span><input id="t7" type="radio" onchange="changeTone(event)" name="tone11" value="11"><img src="img/t7.svg"></span>
+						<span><input type="radio" id="t7"   onchange="changeTone(11, 't7'   )" name="tone11"><img src="img/t7.svg"></span>
 					</td>
 				</tr>
 			</table>
-	        <p class="note">Copyright &copy; 2016 <a href="http://kooima.net">Robert Kooima</a></p>
+			<p class="note">Copyright &copy; 2016 <a href="http://kooima.net">Robert Kooima</a></p>
 		</div>
 		<div id="content">
-			<p class="note">Select a root note and chord tones at the left to configure the fretboard. Select marked positions to configure the chord.</p>
+			<p class="note">Select a root note and chord tones at the left to configure the fretboard. Select marked positions to configure a <a href="http://lilypond.org/doc/v2.19/Documentation/notation/common-notation-for-fretted-strings#fret-diagram-markups">LilyPond fret diagram</a>.</p>
 		</div>
 
 		<script>
@@ -676,7 +676,6 @@
 				for (var i = 0; i < 12; i++)
 				{
 					var t = this.currentTone[i];
-
 					if (t)
 					{
 						var d = tone[t].degree;
@@ -716,9 +715,10 @@
 						diagram.push('x;');
 				}
 
-				var str = '<' + chord.join(' ') + '>1^\\markup { \\fret-diagram-terse #"' + diagram.join('') + '" }'
+				if (chord.length > 0)
+					this.diagram.textContent = '<' + chord.join(' ') + '>'
+				                             + '1^\\markup { \\fret-diagram-terse #"' + diagram.join('') + '" }'
 
-				this.diagram.textContent = str;
 			}
 
 			// Insert a new fretboard after this one.
@@ -734,7 +734,7 @@
 					this.item.remove();
 			}
 
-			// Shift the fretboard up.
+			// Shift the fretboard up in the document order.
 
 			Fretboard.prototype.moveup = function() {
 				var curr = this.item;
@@ -744,7 +744,7 @@
 					document.getElementById("content").insertBefore(curr, prev);
 			}
 
-			// Shift the fretboard down.
+			// Shift the fretboard down in the document order.
 
 			Fretboard.prototype.movedn = function() {
 				var curr = this.item;
@@ -785,45 +785,62 @@
 
 			// Select a root note.
 
-			function changeRoot(s) {
-				for (var d = 0; d < 7; d++)
-					degreeElement[d].innerHTML = html[key[s][d]];
-				currentFretboard.currentRoot = s;
+			function changeRoot(id) {
+				currentFretboard.currentRoot = id;
 				currentFretboard.update();
+
+				// Relabel the tone menu for the selected key.
+
+				for (var d = 0; d < 7; d++)
+					degreeElement[d].innerHTML = html[key[id][d]];
+
 			}
 
 			// Select a chord tone.
 
-			function changeTone(e) {
-				currentFretboard.currentTone[e.target.value] = e.target.id;
+			function changeTone(i, id) {
+				currentFretboard.currentTone[i] = id;
 				currentFretboard.update();
 			}
 
 			// Change the current fretboard to the given fretboard.
 
 			function selectFretboard(fb) {
+
+				// Add the current fretboard to the unselected class.
+
 				if (currentFretboard)
 					currentFretboard.item.className = "item unselected";
+
+				// Add the new fretboard to the selected class.
 
 				currentFretboard = fb;
 				currentFretboard.item.className = "item selected";
 
-				document.getElementById("n0").checked = true;
-				document.getElementById("n1").checked = true;
-				document.getElementById("n2").checked = true;
-				document.getElementById("n3").checked = true;
-				document.getElementById("n4").checked = true;
-				document.getElementById("n5").checked = true;
-				document.getElementById("n6").checked = true;
-				document.getElementById("n7").checked = true;
-				document.getElementById("n8").checked = true;
-				document.getElementById("n9").checked = true;
-				document.getElementById("n10").checked = true;
-				document.getElementById("n11").checked = true;
+				// Reset the tone menu.
+
+				document.getElementById('n0' ).checked = true;
+				document.getElementById('n1' ).checked = true;
+				document.getElementById('n2' ).checked = true;
+				document.getElementById('n3' ).checked = true;
+				document.getElementById('n4' ).checked = true;
+				document.getElementById('n5' ).checked = true;
+				document.getElementById('n6' ).checked = true;
+				document.getElementById('n7' ).checked = true;
+				document.getElementById('n8' ).checked = true;
+				document.getElementById('n9' ).checked = true;
+				document.getElementById('n10').checked = true;
+				document.getElementById('n11').checked = true;
+
+				// Set the tone menu to match the new fretboard.
 
 				for (var i = 0; i < 12; i++)
 					if (currentFretboard.currentTone[i])
 						document.getElementById(currentFretboard.currentTone[i]).checked = true;
+
+				// Set the root menu to match the new fretboard.
+
+				document.getElementById(currentFretboard.currentRoot).checked = true;
 			}
 		</script>
 	</body>
